ZONE-watcher/app/assets/stylesheets/items.css.scss
// Place all the styles related to the Items controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/


#rss-button{
  position: absolute;
  top: 300px;
}

a.label:visited{
  color:white;
}

.btn-group+.btn-group {
  margin-left:0px;
}

.btn-group-label{
  margin-right: 5px;
}

.separationLine
{
    position : relative;
    width:5px;
    border-left:1px solid #fff;
    border-right:1px solid #eee;
    margin-left : 10px;
    margin-right : 10px;
    height:30px;
}

.clear-left{
  clear:left;
}

.clear-right {
  clear: right;
}

